tests/conformance/errors/jsx-syntax.urx
// The closing tag must match the opening tag.
bhejo pakka el = <div>salaam</span>;
